Fri Feb 25 11:34:27 1994  George Jacob  (georgej@louie)

	* fi-emacs19.el: Inserted Kevin Thompson's changes for Emacs19 menubars

Fri Dec 10 15:15:07 1993  George Jacob  (georgej@lava)

	* fi-db.el: Fixed type 'let:scan-stack-mode

	* UserGuide.n: changed fi/site-init to fi-site-init

	* fi-lep.el (fi): Added emacs-version to fi:bug-report

	* fi-modes.el: changed comment-column to be 40 (really)

*******************************************************************************
2.0.11 public release
*******************************************************************************

Thu Sep 23 00:10:52 1993  Kevin Layer  (layer@sole)

	* fi-lemacs.el: fix more menu specs

	* fi-indent.el: search's should never error

	* fi-modes.el: look for -*- only in first line of file

Thu Sep 16 22:48:49 1993  Kevin Layer  (layer@sole)

	* Makefile: fi-dist hacking

	* UserGuide.n: just include major version number

	* fi-leep-lemacs.el: backout in progress fix 

	* fi-lep.el: fi::error-if-request-in-progress is outta here, so
	don't call it.

*******************************************************************************
2.0.10 public release
*******************************************************************************

Mon Sep 13 13:49:07 1993  Kevin Layer  (layer@sole)

	* fi-composer.el: add fi:show-calls-to-and-from

	* fi-lemacs.el: finish menus (some undefined functions were being
	called for xref stuff)

Fri Sep 10 10:34:14 1993  Kevin Layer  (layer@sole)

	* fi-lemacs.el: missed fixing one of the menus

*******************************************************************************
2.0.8 public release
*******************************************************************************

Fri Sep 10 08:43:07 1993  Kevin Layer  (layer@sole)

	* fi-site-init.el: lemacs 19.8 needs cl-compat, too.

Thu Sep  9 11:07:53 1993  Kevin Layer  (layer@sole)

	* fi-lemacs.el: 19.8 active-p menu spec change

Tue Sep  7 17:17:52 1993  Kevin Layer  (layer at sole)
