@@ -1,3 +1,7 @@
+Mon Jun 13 15:42:15 1994  George Jacob  (georgej@lava)
+
+	* Makefile: Added hefty to rdist list
+
 Fri Feb 25 11:34:27 1994  George Jacob  (georgej@louie)
 
 	* fi-emacs19.el: Inserted Kevin Thompson's changes for Emacs19 menubars
